linked the templates

--- a/projects/templates/profile.html
+++ b/projects/templates/profile.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
             {% if user == profile.user %}
-            <a href="{% url 'update_profile' profile.id %}" class="btn btn-primary mb-3">Update profile</a>
+            <a href="{% url 'update_profile' profile.id %}" class="btn btn-secondary btn-sm mb-3">Update profile</a>
             {% endif %}
         </div>
         <div class="col-md-8">
