--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -1,3 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="container">
+    <div class="row">
+        {% for project in projects %}
+        <div class="col-md-4 d-flex">
+            <div class="card md-3 flex-fill">
+                <a href="{% url 'project' project.id %}"><img src="{{project.image.url}}" alt="landing page" class="card-img-top"></a>
+                <div class="card-body">
+                    <h3 class="card-title">{{project.title}}</h3>
+                    <div id="about">
+                        <p class="card-text">by <a href="{% url 'project' project.user %}">{{project.user}}</a></p>
+                        <p class="card-text">{{project.posted_on | date}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
