--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -1,13 +1,10 @@
-<nav class="navbar sticky-top navbar-light bg-light">
+<nav class="navbar sticky-top-md navbar-light bg-light mb-3">
     <div class="container-fliud">
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bar"><span class="navbar-toggler-icon"></span> 
+        </button> 
         <a href="/" class="navbar-brand">awwwards.</a>
-        <!-- <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bar">
-            <span c <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bar">
-            <span class="navbar-toggler-icon"></span>
-        </button>lass="navbar-toggler-icon"></span>
-        </button> -->
-        <!-- <div class="collapse navbar-collapse" id="bar"> -->
-            <form role='search' action="{% url 'search_project' %}" class="form-inline my-2 my-lg-0 mx-auto">
+        <div class="collapse navbar-collapse" id="bar">
+            <form role='search' action="{% url 'search_project' %}" class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" id="message" placeholder="Search" name="project">
                 <button class="btn btn-secondary btn-sm-block my-2 my-sm-0 my-md-2" type="submit">Search</button>
             </form>
@@ -32,9 +29,9 @@
                 </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a href="{% url 'upload_project' %}" class="nav-link"> SUBMIT YOUR SITE!</a>
+                    <a href="{% url 'upload' %}" class="nav-link"> SUBMIT YOUR SITE!</a>
                 </li>
             </ul>
-        <!-- </div> -->
+        </div>
     </div>
 </nav>
