--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -9,13 +9,15 @@
                 <div class="card-body">
                     <h3 class="card-title">{{project.title}}</h3>
                     <div id="about">
-                        <p class="card-text">by <a href="{% url 'project' project.user %}">{{project.user}}</a></p>
-                        <p class="card-text">{{project.posted_on | date}}</p>
+                        <p class="card-text">by <a href="{% url 'profile' project.user.id %}">{{project.user}}</a></p>
+                        <p class="card-text text-muted">{{project.posted_on | date}}</p>
                     </div>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
+    
+    <p>hello world</p>
 </div>
 {% endblock %}
