--- a/projects/templates/project.html
+++ b/projects/templates/project.html
@@ -30,7 +30,7 @@
                                 <form action="" enctype="multipart/form-data" method="post">
                                     {% csrf_token %}
                                     {% bootstrap_form form %}
-                                    <input type="submit" value="Submit" class="btn btn-secondary btn-sm">
+                                    <input type="submit" value="Submit" class="btn btn-primary btn-sm">
                                 </form>
                             </div>
                         </div>
