--- a/projects/templates/upload.html
+++ b/projects/templates/upload.html
@@ -2,12 +2,12 @@
 {% load bootstrap4 %}
 {% block content %}
 <div class="container">
-    <div class="card">
+    <div class="card" id="upload">
         <div class="card-body">
             <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% bootstrap_form form %}
-                <input type="submit" value="Submit" class="btn btn-secondary btn-sm">
+                <input type="submit" value="Submit" class="btn btn-primary btn-sm">
             </form>
         </div>
     </div>
