--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -18,7 +18,7 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="/profile/{{user}}" class="nav-link">Profile</a>
+                    <a href="{% url 'profile' request.user.id %}" class="nav-link">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a href="/logout/" class="nav-link">Logout</a>
