--- a/projects/templates/project.html
+++ b/projects/templates/project.html
@@ -8,7 +8,7 @@
             <h3 class="card-title">{{project.title}}</h3>
             <p class="card-text">{{project.description}}</p>
             <p class="card-text">
-                <a href="{% url 'profile' project.user.username %}" class="card-link">{{project.user.username}}</a>
+                <a href="{% url 'profile' project.user.id %}" class="card-link">{{project.user.username}}</a>
             </p>
             <p class="card-text">Posted on {{project.posted_on | date}}</p>
             <p class="card-text">
