--- a/projects/templates/search.html
+++ b/projects/templates/search.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         {% if projects %}
-        <h3>Found {{projects|length}} result(s) for {{mesage}}</h3>
+        <h3>Found {{projects|length}} result(s) for {{message}}</h3>
         {% else %}
         <h3>Found 0 results for {{message}} </h3>
         {% endif %}
@@ -14,8 +14,8 @@
         {% for project in projects %}
         <div class="col-md-4">
             <div class="card">
-                <a href="{% url 'project' project,id %}">
-                    <img src="{{%project.image.url%}}" alt="landing page" class="card-img-top">
+                <a href="{% url 'project' project.id %}">
+                    <img src="{{project.image.url}}" alt="landing page" class="card-img-top">
                 </a>
                 <div class="card-body">
                     <h3 class="card-title">{{project.title}}</h3>
