--- a/projects/templates/project.html
+++ b/projects/templates/project.html
@@ -20,7 +20,7 @@
             <p class="card-text">Average - {{average}}</p>
             {% if user.is_authenticated %}
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-sm mb-3" data-toggle="modal" data-target="exampleModal">Vote</button>
+            <button type="button" class="btn btn-primary btn-sm mb-3" data-toggle="modal" data-target="#exampleModal">Vote</button>
             <!-- Voting Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
